--- a/HTMLPersonalSite/contact.html
+++ b/HTMLPersonalSite/contact.html
@@ -11,5 +11,17 @@
       <li>Email: atemporarymail@unknown.com</li>
       <li>Facebook: <a href="https://www.facebook.com/paritosh">Paritosh</a></li>
     </ul>
+
+    <hr size = '2'>
+
+    <form action="mailto:paritosh.patil18@vit.edu" method="post" enctype="text/plain">
+      <label for="">Name: </label>
+      <input type="text" name="Name" value=""> <br>
+      <label for="">Email: </label>
+      <input type="email" name="Email" value=""> <br>
+      <label for="">Message: </label>
+      <textarea name="Message" rows="10" cols="40"></textarea> <br>
+      <input type="submit" name="">
+    </form>
   </body>
 </html>
