--- a/HTMLPersonalSite/index.html
+++ b/HTMLPersonalSite/index.html
@@ -73,29 +73,37 @@
   </table>
 
 <h3>Skills</h3>
-  <table border="2">
-    <tr>
-      <tr>
-        <td>WebDev</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Python</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-    </tr>
 
-    <tr>
+<table>
+  <td>
+    <table>
       <tr>
-        <td>Flutter</td>
-        <td>⭐⭐⭐</td>
+            <td>Python</td>
+            <td>⭐⭐⭐⭐⭐</td>
       </tr>
       <tr>
-        <td>Java</td>
-        <td>⭐⭐⭐⭐</td>
+            <td>Java</td>
+            <td>⭐⭐⭐</td>
       </tr>
-    </tr>
-  </table>
+    </table>
+
+  </td>
+
+  <td>
+    <table>
+      <tr>
+            <td>Flutter</td>
+            <td>⭐⭐⭐⭐</td>
+      </tr>
+
+      <tr>
+            <td>C++</td>
+            <td>⭐⭐⭐</td>
+      </tr>
+    </table>
+  </td>
+</table>
+
 
   <br>
   <hr size='2' noshade color='black' />
