--- a/HTMLPersonalSite/index.html
+++ b/HTMLPersonalSite/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Paritosh Patil</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
       </td>
     </tr>
   </table>
-  <hr size='2' noshade color='black' />
+  <hr>
 
   <h3>Education</h3>
 
@@ -52,6 +53,8 @@
     </li>
   </ul>
   <br>
+
+  <hr>
   <h3>Experience</h3>
   <table>
     <th>Date</th>
@@ -106,7 +109,7 @@
 
 
   <br>
-  <hr size='2' noshade color='black' />
+  <hr>
 
   <h3><a href="contact.html">Contact Me</a></h3>
 
